<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.MutableLiveData"/>
        <variable
            name="salary"
            type="MutableLiveData&lt;String>" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <LinearLayout
            android:id="@+id/layout_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="@string/month"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/text_select_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:text="@string/salary"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edit_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_input_salary"
                android:inputType="number"
                android:text="@={salary}"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/pickerview_bottom_btn_bg"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />


    </LinearLayout>
</layout>
